# hello-wasi-http

./: .gitignore  Cargo.toml  README.md
src/: bindings.rs  lib.rs
wit/: world.wit
